# GCyberChef

./: .gitignore  LICENSE  README.md  meson.build  xyz.kowalski7cc.GCyberChef.yaml
.flatpak/: meson.sh
data/: meson.build  xyz.kowalski7cc.GCyberChef.data.gresource.xml  xyz.kowalski7cc.GCyberChef.desktop  xyz.kowalski7cc.GCyberChef.gschema.xml  xyz.kowalski7cc.GCyberChef.metainfo.xml
src/: Application.js  main.js  xyz.kowalski7cc.GCyberChef.js  xyz.kowalski7cc.GCyberChef.src.gresource.xml
